--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-lightbox",
+  "name": "angularjs-lightbox",
   "version": "1.0.0",
   "description": "A minimal lightbox directive for AngularJS.",
   "repository": {
@@ -7,7 +7,7 @@
     "url": "https://github.com/abodelot/angular-lightbox.git"
   },
   "keywords": [
-    "angular",
+    "angularjs",
     "lightbox"
   ],
   "author": "Alexandre Bodelot",
